<!--
  ~ Copyright 2018 NAVER Corp.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.navercorp.pinpoint</groupId>
        <artifactId>pinpoint-naver</artifactId>
        <version>1.8.1-SNAPSHOT</version>
    </parent>

    <artifactId>pinpoint-naver-web</artifactId>
    <name>naver-pinpoint-web</name>
    <packaging>war</packaging>

    <properties>
        <jdk.version>1.8</jdk.version>
        <jdk.home>${env.JAVA_8_HOME}</jdk.home>
        <buildTime>${maven.build.timestamp}</buildTime>
        <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
        <sniffer.artifactid>java18</sniffer.artifactid>
        <fastxml.jackson.version>2.8.10</fastxml.jackson.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.navercorp.pinpoint</groupId>
            <artifactId>pinpoint-commons</artifactId>
        </dependency>
        <dependency>
            <groupId>com.navercorp.pinpoint</groupId>
            <artifactId>pinpoint-commons-hbase</artifactId>
        </dependency>
        <dependency>
            <groupId>com.navercorp.pinpoint</groupId>
            <artifactId>pinpoint-rpc</artifactId>
        </dependency>
        <dependency>
            <groupId>com.navercorp.pinpoint</groupId>
            <artifactId>pinpoint-thrift</artifactId>
        </dependency>

        <dependency>
            <groupId>com.navercorp.pinpoint</groupId>
            <artifactId>pinpoint-web</artifactId>
            <type>war</type>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
        </dependency>

        <dependency>
            <groupId>com.navercorp.pinpoint</groupId>
            <artifactId>pinpoint-web</artifactId>
            <classifier>classes</classifier>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.navercorp.pinpoint</groupId>
            <artifactId>pinpoint-collector</artifactId>
            <classifier>classes</classifier>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.navercorp.pinpoint</groupId>
            <artifactId>pinpoint-bootstrap-core</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>cubrid</groupId>
            <artifactId>cubrid-jdbc</artifactId>
            <version>9.2.0.0155</version>
        </dependency>

        <dependency>
            <groupId>com.navercorp.pinpoint</groupId>
            <artifactId>pinpoint-naver-plugins</artifactId>
            <type>pom</type>
        </dependency>

        <!-- for email platform dependencies -->
        <dependency>
            <groupId>com.nhncorp.lucy</groupId>
            <artifactId>lucy-npc</artifactId>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.jayway.jsonpath</groupId>
            <artifactId>json-path</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.batch</groupId>
            <artifactId>spring-batch-test</artifactId>
            <version>${spring.batch.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.naver.nelo2</groupId>
            <artifactId>nelo2-java-sdk-log4j</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.httpcomponents</groupId>
                    <artifactId>httpclient</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.apache.httpcomponents</groupId>
                    <artifactId>httpcore</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-databind</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.tomcat.embed</groupId>
            <artifactId>tomcat-embed-websocket</artifactId>
            <version>7.0.52</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>${basedir}/src/main/java</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </resource>
            <resource>
                <filtering>true</filtering>
                <directory>${basedir}/src/main/resources</directory>
            </resource>
            <resource>
                <directory>${basedir}/src/main/resources-${env}</directory>
            </resource>
        </resources>

        <plugins>

            <!--
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-war-plugin</artifactId>
                            <configuration>
                                <attachClasses>true</attachClasses>
                                <webResources>
                                    <resource>
                                        <directory>target/main/webapp</directory>
                                    </resource>
                                </webResources>
                            </configuration>
                        </plugin>
            -->


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <configuration>
                    <overlays>
                        <overlay>
                            <groupId>com.navercorp.pinpoint</groupId>
                            <artifactId>pinpoint-web</artifactId>
                        </overlay>
                    </overlays>
                    <webResources>
                        <resource>
                            <filtering>true</filtering>
                            <directory>src/main/webapp</directory>
                            <includes>
                                <include>**/*.html</include>
                            </includes>
                        </resource>
                    </webResources>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <!-- for ci server -->
            <id>run-integration-test</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.tomcat.maven</groupId>
                        <artifactId>tomcat7-maven-plugin</artifactId>
                        <version>2.2</version>
                        <configuration>
                            <path>/</path>
                            <port>20430</port>
                            <fork>true</fork>
                            <uriEncoding>UTF-8</uriEncoding>
                            <systemProperties>
                                <JAVA_OPTS>-Xms256m -Xmx512m -XX:MaxPermSize=256m</JAVA_OPTS>
                            </systemProperties>
                        </configuration>
                        <executions>
                            <execution>
                                <id>start-tomcat</id>
                                <phase>pre-integration-test</phase>
                                <goals>
                                    <goal>run</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>stop-tomcat</id>
                                <phase>post-integration-test</phase>
                                <goals>
                                    <goal>shutdown</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>m2e</id>
            <activation>
                <property>
                    <name>m2e.version</name>
                </property>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>com.navercorp.pinpoint</groupId>
                    <artifactId>pinpoint-plugins</artifactId>
                    <type>pom</type>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <!-- for ci server -->
            <id>v2</id>
            <build>
                <plugins>
                    <!--<plugin>-->
                    <!--<groupId>org.apache.maven.plugins</groupId>-->
                    <!--<artifactId>maven-antrun-plugin</artifactId>-->
                    <!--<version>1.8</version>-->
                    <!--<executions>-->
                    <!--<execution>-->
                    <!--<id>prepare-grunt</id>-->
                    <!--<phase>package</phase>-->
                    <!--<goals>-->
                    <!--<goal>run</goal>-->
                    <!--</goals>-->
                    <!--<configuration>-->
                    <!--<target>-->
                    <!--<copy todir="${basedir}/target/grunt" failonerror="true" verbose="true">-->
                    <!--<fileset dir="${basedir}/src/grunt"/>-->
                    <!--</copy>-->
                    <!--<copy todir="${basedir}/target/main/webapp" failonerror="true" verbose="true">-->
                    <!--<fileset dir="${basedir}/src/main/webapp"/>-->
                    <!--</copy>-->
                    <!--<copy file="${basedir}/src/Gruntfile.js" tofile="${basedir}/target/Gruntfile.js"-->
                    <!--failonerror="true" verbose="true"/>-->
                    <!--<copy file="${basedir}/src/package.json" tofile="${basedir}/target/package.json"-->
                    <!--failonerror="true" verbose="true"/>-->
                    <!--</target>-->
                    <!--</configuration>-->
                    <!--</execution>-->
                    <!--</executions>-->
                    <!--</plugin>-->
                    <plugin>
                        <groupId>com.github.eirslett</groupId>
                        <artifactId>frontend-maven-plugin</artifactId>
                        <version>1.5</version>
                        <configuration>
                            <installDirectory>target</installDirectory>
                        </configuration>
                        <executions>
                            <execution>
                                <id>install node and npm v2</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>install-node-and-npm</goal>
                                </goals>
                                <configuration>
                                    <nodeVersion>v10.6.0</nodeVersion>
                                    <npmVersion>6.1.0</npmVersion>
                                    <!--<workingDirectory>${basedir}/target/main/webapp/v2</workingDirectory>-->
                                    <workingDirectory>${basedir}/deploy/webapp/v2</workingDirectory>
                                </configuration>
                            </execution>
                            <execution>
                                <id>npm install v2</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>npm</goal>
                                </goals>
                                <configuration>
                                    <arguments>install</arguments>
                                    <!--<workingDirectory>${basedir}/target/main/webapp/v2</workingDirectory>-->
                                    <workingDirectory>${basedir}/target/deploy/v2</workingDirectory>
                                </configuration>
                            </execution>

                            <execution>
                                <id>npm run build v2</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>npm</goal>
                                </goals>
                                <configuration>
                                    <arguments>run build:naver</arguments>
                                    <!--<workingDirectory>${basedir}/target/main/webapp/v2</workingDirectory>-->
                                    <workingDirectory>${basedir}/target/deploy/v2</workingDirectory>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-antrun-plugin</artifactId>
                        <version>1.8</version>
                        <executions>
                            <execution>
                                <id>delete pre-build file</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>run</goal>
                                </goals>
                                <configuration>
                                    <target>
                                        <delete>
                                            <fileset dir="${basedir}/target/deploy/v2" includes="*.js, *.map, *.html" />
                                        </delete>
                                    </target>
                                </configuration>
                            </execution>
                            <execution>
                                <id>copy deploy source</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>run</goal>
                                </goals>
                                <configuration>
                                    <target>
                                        <copy todir="${basedir}/target/deploy/v2" failonerror="true" verbose="true" overwrite="true">
                                            <fileset dir="${basedir}/target/v2-build">
                                                <exclude name="node_modules/**"/>
                                            </fileset>
                                        </copy>
                                    </target>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
